assets/styles/styles.css
* {
  box-sizing: border-box;
}

html,
.container-fluid {
  background: #dad7f0;
  font-family: 'Mandali', sans-serif;
}

header {
  position: relative;
  text-align: center;
}

.hidden {
  display: none;
}

.title {
  display: block;
  width: 250px;
  margin: .2em auto;
  font-family: 'Mandali', sans-serif;
  font-weight: bold;
  opacity: 0.7;
}

.sign-in-area,
.sign-out-area {
  position: absolute;
  float: right;
  font-size: 14px;
  top: 25px;
  right: 0;
}

.sign-in-area {
  width: 210px;
}

.sign-out-area {
  width: 300px;
  text-align: right;
  padding-right: 10px;
}

.sign-out-area > fieldset {
  position: relative;
}

@media all and (max-width: 750px) {
  .sign-in-area,
  .sign-out-area {
    position: relative;
    width: 250px;
    margin: auto;
  }
}

.input-age-area,
.view-baby-stat {
  margin: auto;
  width: 600px;
  text-align: center;
  padding-top: 100px;
}

.input-age-area {
  font-size: 35px;
}

.view-baby-stat {
  font-size: 25px;
  opacity: 0.7;
}

.age-box {
  margin: 15px;
  opacity: 0.5;
}

form {
  font-family: 'Mandali', sans-serif;
  margin: 15px;
  padding: 6px 0;
  height: 3em;
}

.remove-baby {
  position: absolute;
  float: right;
  font-size: 14px;
  top: 25px;
  left: 0;
}

#change-password {
  padding-top: 5px;
  padding-left: 100px;
  padding-bottom: 100px;
}

input {
  display: block;
  border: none;
  margin-top: 10px !important;
  /*margin-right: 125px;*/
  padding: 7px;
  border-radius: 5px;
  outline: none;
}

button {
  background-color: #f3e5f9;
  -webkit-transition-duration: 0.4s;
  border: none;
  border-radius: 5px;
  transition-duration: 0.4s;
  padding: 10px 20px;
}

button:hover {
  background-color: #dad7f0;
}

button:focus {
  outline:0;
}

h1 {
  font-size: 70px;
}

p,
.signInErrorMessage,
.baby-size-text {
  font-family: 'Mandali', sans-serif;
  text-align: center;
  opacity: 0.6;
}

p {
  font-size: 18px;
}

.baby-size-text {
  font-size: 18px;
  padding-bottom: 40px;
  padding-top: 15px;
}

.signInErrorMessage,
.change-pwd-error,
.change-pwd-success {
  font-size: 14px;
  padding-top: 10px;
  padding-right: 10px;
}

.home-img {
  display: block;
  width: 51%;
  margin: auto;
  height: auto;
}
.home-img,
.baby-size-img {
  animation: pulse_animation 3s ease-in-out infinite;
}
.baby-size-img {
  padding-top: 35px;
  width: 35%;
  display: none;
  margin: auto;
  height: auto;
}
@media only screen and (max-width: 800px) {
  .home-img {
    width: 90%;
  }
}
@media only screen and (max-width: 750px) {
  .baby-size-img {
    width: 60%;
  }
}
@media only screen and (min-width: 1175px) {
  .home-img {
    width: 40%;
  }
}

@keyframes pulse_animation {
	0% { transform: scale(1); }
	50% { transform: scale(1.03); }
	100% { transform: scale(1); }
}

